--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <h2>Enter Your Date of Birth (DOB):</h2>
+    <h3>Find Your Generation By Date Of Birth</h3>
     <div>
         <input type="date" id="dob">
         <button onclick="checkGeneration()">Check</button>
