--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age and Generation Checker</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
 </head>
 
 <body>
 
-    <h2>Enter Your Date of Birth (DOB):</h2>
-    <h3>Find Your Generation By Date Of Birth</h3>
+    <h2>Age And Generation Checker</h2>
+    <h3 class="h3">Find Your Generation By Date Of Birth. Please Enter Your Date of Birth (DOB):</h3>
     <div>
         <input type="date" id="dob">
         <button onclick="checkGeneration()">Check</button>
