--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 
 
 <body>
-
+<div class="main">
+    
+</div>
     <h2>Age And Generation Checker</h2>
-    <h3 class="h3">Find Your Generation By Date Of Birth. Please Enter Your Date of Birth (DOB):</h3>
+    <h3 class="h3">Find Your Generation By Date Of Birth.</h3>
+    <h3 class="h3"> Please Enter Your Date of Birth (DOB):</h3>
     <div>
         <input type="date" id="dob">
         <button onclick="checkGeneration()">Check</button>
